yelb-karpenter/deployment-redis-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
spec:
  selector:
    matchLabels:
      app: redis-server
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-server
        tier: cache
        app.kubernetes.io/name: yelb
    spec:
      containers:
      - name: redis-server
        image: redis:7
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        resources:
          limits:
            memory: 20Mi
          requests:
            memory: 5Mi
            cpu: 20m
      tolerations:
      - key: "fairwinds.com/bakeoff"
        operator: "Equal"
        value: "karpenter"
        effect: "NoSchedule"
      nodeSelector:
        fairwinds.com/bakeoff: karpenter
