yelb-karpenter/service-yelb-appserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: yelb-appserver
  labels:
    app: yelb-appserver
    tier: middletier
spec:
  type: ClusterIP
  ports:
  - port: 4567
    name: http
  selector:
    app: yelb-appserver
    tier: middletier
