yelb-karpenter/ingress-yelb-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: yelb-ui
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: yelb.karpenter.sandbox.hillghost.com
    http:
      paths:
      - backend:
          service:
            name: yelb-appserver
            port:
              name: http
        path: /api
        pathType: ImplementationSpecific
      - backend:
          service:
            name: yelb-ui
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - yelb.karpenter.sandbox.hillghost.com
    secretName: yelb-ui-tls
